lab3/modules/net-getway.tf
resource "aws_internet_gateway" "internet_gateway" {
  vpc_id = aws_vpc.main.id
  tags = {
    Name = "main-igw"
  }
}
